// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quoter accuracy & sqrt pricing snapshots ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "pool": "0xf3eE3C4Ec25e8414838567818A30C90c7d62f834",
  "reserves": Object {
    "asset": "100000000000000000000",
    "usdc": "100000000000000000000",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 2`] = `87237`;

exports[`Quoter accuracy & sqrt pricing snapshots ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "99999901750000000000000000",
      "u": "99999902744891443167305236",
    },
    "before": Object {
      "a": "99999902750000000000000000",
      "u": "99999901750000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "994891443167305236",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "994891443167305236",
    "usdcOut": "994891443167305236",
  },
  "gasUsed": "87237",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "994891443167305236",
      "extra": Object {
        "0": "994891443167305236",
        "1": "51",
      },
      "sqrtAfter": null,
      "sqrtBefore": "51",
    },
    "quoter": Object {
      "amountOut": "994891443167305236",
      "extra": Object {
        "0": "994891443167305236",
        "1": "51",
        "2": "389500000000000000000",
        "3": "389505108556832694764",
        "4": "51",
      },
      "sqrtAfter": "389500000000000000000",
      "sqrtBefore": "51",
    },
    "routerStatic": "994891443167305236",
  },
  "reserves": Object {
    "after": Object {
      "a": "195750000000000000000",
      "u": "193755108556832694764",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "994891443167305236",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots Monotonicity (same block): larger amountIn → >= amountOut ASSET->USDC via quoter 1`] = `
Object {
  "direction": "ASSET->USDC",
  "q025": "249679487179487179",
  "q050": "498719590268886043",
  "q100": "994891443167305236",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots Monotonicity (same block): larger amountIn → >= amountOut USDC->ASSET via quoter 1`] = `
Object {
  "direction": "USDC->ASSET",
  "q025": "249679487179487179",
  "q050": "498719590268886043",
  "q100": "994891443167305236",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (A->U) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "99999803000000000000000010",
      "u": "99999803000000000000000009",
    },
    "before": Object {
      "a": "99999803000000000000000020",
      "u": "99999803000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "9",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "9",
    "usdcOut": "9",
  },
  "gasUsed": "87177",
  "input": Object {
    "amountIn": "10",
    "minOut": "0",
  },
  "label": "tiny — A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
        "2": "582000000000000000000",
        "3": "582000000000000000001",
        "4": "0",
      },
      "sqrtAfter": "582000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "9",
  },
  "reserves": Object {
    "after": Object {
      "a": "291000000000000000010",
      "u": "290999999999999999991",
    },
    "before": Object {
      "a": "291000000000000000000",
      "u": "291000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "9",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (U->A) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "99999803000000000000000009",
      "u": "99999803000000000000000010",
    },
    "before": Object {
      "a": "99999803000000000000000000",
      "u": "99999803000000000000000020",
    },
    "delta": Object {
      "a": "9",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "9",
    "sumOut": "9",
    "usdcOut": "0",
  },
  "gasUsed": "87209",
  "input": Object {
    "amountIn": "10",
    "minOut": "0",
  },
  "label": "tiny — U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
        "2": "582000000000000000000",
        "3": "582000000000000000001",
        "4": "0",
      },
      "sqrtAfter": "582000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "9",
  },
  "reserves": Object {
    "after": Object {
      "a": "290999999999999999991",
      "u": "291000000000000000010",
    },
    "before": Object {
      "a": "291000000000000000000",
      "u": "291000000000000000000",
    },
    "delta": Object {
      "a": "9",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "pool": "0x94B9874aC5605713CcAc00ca8E832B37e15c1399",
  "reserves": Object {
    "asset": "100000000000000000000",
    "usdc": "100000000000000000000",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 2`] = `87257`;

exports[`Quoter accuracy & sqrt pricing snapshots USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "99999902744891443167305236",
      "u": "99999901750000000000000000",
    },
    "before": Object {
      "a": "99999901750000000000000000",
      "u": "99999902750000000000000000",
    },
    "delta": Object {
      "a": "994891443167305236",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "994891443167305236",
    "sumOut": "994891443167305236",
    "usdcOut": "0",
  },
  "gasUsed": "87257",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "994891443167305236",
      "extra": Object {
        "0": "994891443167305236",
        "1": "51",
      },
      "sqrtAfter": null,
      "sqrtBefore": "51",
    },
    "quoter": Object {
      "amountOut": "994891443167305236",
      "extra": Object {
        "0": "994891443167305236",
        "1": "51",
        "2": "389500000000000000000",
        "3": "389505108556832694764",
        "4": "51",
      },
      "sqrtAfter": "389500000000000000000",
      "sqrtBefore": "51",
    },
    "routerStatic": "994891443167305236",
  },
  "reserves": Object {
    "after": Object {
      "a": "193755108556832694764",
      "u": "195750000000000000000",
    },
    "before": Object {
      "a": "194750000000000000000",
      "u": "194750000000000000000",
    },
    "delta": Object {
      "a": "994891443167305236",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;
